# best-practices

./: .gitignore  QUICK_REFERENCE.md  README.md
examples/go-api-example/: .golangci.yml  Makefile
examples/go-api-example/.github/workflows/: ci.yml
examples/rust-api-example/: .clippy.toml  Cargo.toml  rustfmt.toml
examples/rust-api-example/.github/workflows/: ci.yml
skills/: api-design-patterns.md  api-security-patterns.md  caching-performance-patterns.md  database-engineering-patterns.md  go-advanced-patterns.md  golang-best-practices.md  observability-patterns.md  real-world-project-patterns.md  rust-advanced-patterns.md  rust-best-practices.md  testing-patterns.md  web-application-patterns.md  web-security-attacks-guide.md
